@@ -1,13 +1,13 @@
 {
-  "timestamp" : "2022-08-08T01:47:46Z",
+  "timestamp" : "2022-08-08T08:26:31Z",
   "count_outdated" : 2319,
   "uniques_outdated" : 528,
-  "count" : 2351,
+  "count" : 2350,
   "uniques" : 545,
   "clones" : [
     {
       "timestamp": "2022-07-25T00:00:00Z",
-      "count": 3,
+      "count": 2,
       "count_minmax": [ 1, 3 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
